# icp_backend

./: '  .env  Cargo.toml
entity/: Cargo.toml
entity/src/entities/: asset.rs  auth_token.rs  client.rs  client_auth_token.rs  client_monthly_requests.rs  client_package_subscription.rs  client_usage.rs  folder.rs  mod.rs  prelude.rs  profile.rs  subscription_package.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241204_111833_create_user_tables.rs  m20241204_122105_create_client_and_package_tables.rs  m20241205_070110_create_asset_table.rs  m20241205_081228_create_auth_tables.rs  utils.rs
src/: main.rs
src/apps/: mod.rs
src/apps/assets/: mod.rs
src/apps/assets/graphql/: mod.rs
src/apps/assets/graphql/mutations/: assets.rs
src/apps/assets/graphql/queries/: assets.rs
src/apps/assets/graphql/types/inputs/: assets.rs
src/apps/assets/graphql/types/outputs/: assets.rs
src/apps/assets/utils/: contract.rs  files.rs  formating.rs  mod.rs  pinata.rs
src/apps/common/graphql/types/: inputs.rs
src/apps/users/graphql/mutations/: auth.rs  clients.rs
src/apps/users/graphql/queries/: clients.rs  users.rs
src/apps/users/graphql/types/inputs/: auth.rs  clients.rs  mod.rs
src/apps/users/graphql/types/outputs/: clients.rs  users.rs
src/apps/users/utils/: auth.rs
src/config/: database.rs  mod.rs  schema.rs  settings.rs
